# cloudera.cluster

./: .ansible-lint  .ansible-lint-ignore  .gitignore  .pre-commit-config.yaml  .test.sh  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  README.md  TESTING.md  bindep.txt  create_freeipa.yml  create_infrastructure.yml  enable_autotls.yml  galaxy.yml  hosts  install_cloudera_manager.yml  install_cluster.yml  nifi_workaround.yml  prepare_nodes.yml  prepare_security.yml  prepare_tls.yml  prepare_ycloud.yml  pyproject.toml  pytest.ini  refresh_ranger_kms_repo.yml  requirements.txt  requirements.yml  set_cloudera_manager_password.yml  setup_hdfs_encryption.yml  setup_kms_ha.yml  setup_kms_service.yml  setup_kts_ha.yml  site.yml  teardown.yml  teardown_tls.yml  verify_everything.yml  verify_inventory_and_definition.yml  verify_parcels.yml
.github/workflows/: ansible-lint.yml  construct_docs.yml  label_pr.yml  pre-commit.yml  publish_docs.yml  publish_galaxy.yml  reset_pr.yml  validate_pr.yml  validate_pr_docs.yml
builder/: requirements.yml
changelogs/: .plugin-cache.yaml  changelog.yaml  config.yaml
definitions/6.3.3/: cluster.yml  extra_vars.yml
definitions/7.0.3/: cluster.yml  extra_vars.yml
definitions/7.1.1/: cluster.yml  extra_vars.yml
docs/: api-design.md  definitions.md  freeipa.md  getting-started.md  inventories.md  links.yml  security.md  self-contained-playbooks.md  troubleshooting.md
docs/docsite/: config.yml  extra-docs.yml  links.yml
docs/how-to/: add-nodes-to-cluster.md  clear-ca-server-state.md  database-configuration.md  externally-signed.md  oracle.md  virtual-private-clusters.md
docs/playbooks/: create_infrastructure.md  install_cloudera_manager.md  install_cluster.md  prepare_nodes.md  prepare_security.md  teardown.md  verify_everything.md
docsbuild/: .gitignore  antsibull-docs.cfg  build.sh  cloudera.css  conf.py  requirements.txt
docsbuild/templates/: layout.html
examples/basic-7.1.x/: cluster.yml  extra_vars.yml
examples/sample/: cluster.yml  extra_vars.yml
filter_plugins/: filters.py
group_vars/: all  kms_servers.yml  kts_servers.yml
meta/: runtime.yml
plugins/action/: assemble_cluster_template.py  cm_api.py
plugins/doc_fragments/: cm_endpoint.py  cm_options.py  cm_resource.py  message.py  purge.py
plugins/filter/: append_database_port.yml  cluster_service_role_hosts.yml  default_database_port.yml  extract_custom_role_groups.yml  extract_custom_roles.yml  extract_parcel_urls.yml  extract_products_from_manifests.yml  extract_role_and_group.yml  filter_null_configs.yml  filters.py  find_clusters.yml  flatten_dict_list.yml  format_database_type.yml  get_database_collation_mysql.yml  get_database_encoding_mysql.yml  get_major_version.yml  get_product_version.yml  to_ldap_type_enum.yml
plugins/lookup/: cm_api.py  cm_license.py  cm_service.py
plugins/module_utils/: cluster_utils.py  cm_controller_utils.py  cm_utils.py  data_context_utils.py  external_auth_utils.py  host_template_utils.py  host_utils.py  parcel_utils.py  role_config_group_utils.py  role_utils.py  service_utils.py
plugins/modules/: assemble_cluster_template.py  cluster.py  cluster_info.py  cluster_service.py  cluster_service_config.py  cluster_service_config_info.py  cluster_service_info.py  cluster_service_role_info.py  cluster_service_type_info.py  cluster_service_types_info.py  cm_autotls.py  cm_autotls_info.py  cm_cluster.py  cm_cluster_info.py  cm_config.py  cm_config_info.py  cm_endpoint_info.py  cm_import_cluster_template.py  cm_kerberos.py  cm_kerberos_info.py  cm_license.py  cm_license_info.py  cm_resource.py  cm_resource_info.py  cm_service.py  cm_service_config.py  cm_service_info.py  cm_service_role.py  cm_service_role_config.py  cm_service_role_config_group.py  cm_service_role_config_group_config.py  cm_service_role_config_group_info.py  cm_service_role_info.py  cm_trial.py  cm_trial_license.py  cm_version_info.py  control_plane.py  control_plane_info.py  data_context.py  data_context_info.py  (+35 more)
roles/assemble_template/: README.md
roles/cm_agent/: README.md
roles/cm_csds/: README.md
roles/cm_server/: README.md
roles/teardown/: README.md
tasks/: group_hosts.yml  group_hosts_by_tls.yml
tests/: README.md  config.yml  return-values-cm_service.yml  return-values-cm_service_role.yml  return-values-cm_service_role_config_group.yml
tests/unit/: __init__.py  conftest.py  requirements.txt
vars/: ca_server.yml  user_accounts.yml
(+709 files in other folders)
